--- a/index.html
+++ b/index.html
@@ -2,31 +2,23 @@
 <html>
   <head>
     <title>TODO(JS)</title>
+    <link rel="stylesheet" href="src/styles.css">
     <meta charset="UTF-8" />
   </head>
 
   <body>
-    <div>
-      <input placeholder="TODOを入力" />
-      <button>追加</button>
+    <div class="input-area">
+      <input id="add-text" placeholder="TODOを入力" />
+      <button id="add-button">追加</button>
     </div>
-    <div>
-      <p>未完了のTODO</p>
-      <ul>
-        <div>
-          <li>TODOです</li>
-          <button>完了</button>
-          <button>削除</button>
-        </div>
+    <div class="incomplete-area">
+      <p class="title">未完了のTODO</p>
+      <ul id="incomplete-list">
       </ul>
     </div>
-    <div>
-      <p>完了したTODO</p>
-      <ul>
-        <div>
-          <li>TODOでした</li>
-          <button>戻す</button>
-        </div>
+    <div class="complete-area">
+      <p class="title">完了したTODO</p>
+      <ul id="complete-list">
       </ul>
     </div>
     <script src="src/index.js"></script>
